--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta name="google-site-verification" content="7SwCDvkGA79Z04v9XlJ2XTK5QMuZArK-0BS607o-Eug" />
     <title>군장존 - 로스트아크 군장 검사 사이트</title>
   </head>
   <body>
